mutate-and-validate-node-filtering/node-selector/policy/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredNodeSelector
metadata:
  name: secure-scheduling-with-node-selector
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-*"]
  parameters:
    nodeSelectorKeys: ["security_level"]
