mutate-and-validate-node-filtering/node-selector/policy/pod-no-matching-node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
spec:
  nodeSelector:
    random_label: random_value
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
